--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 env:
   - DB=postgresql
 script:
-  - RAILS_ENV=test bundle exec rake --trace db:structure:load
+  - RAILS_ENV=test bundle exec rake --trace test
 before_script:
   - psql -c 'create database resonanz_test' -U postgres
+  - RAILS_ENV=test bundle exec rake --trace db:structure:load
