replace angular.cookie module with jquery.cookie

--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,11 @@
 /tmp
 
 # font awesome
-vendor/assets/components/font-awesome/css
-vendor/assets/components/font-awesome/docs
-vendor/assets/components/font-awesome/less
-vendor/assets/components/font-awesome/sass/*.scss
-vendor/assets/components/font-awesome/.gitignore
-vendor/assets/components/font-awesome/component.json
-vendor/assets/components/font-awesome/README.md
+vendor/assets/components/font-awesome/*
+!vendor/assets/components/font-awesome/sass/*.sass
+
+# jquery.cookie
+vendor/assets/components/jquery.cookie/*
+!vendor/assets/components/jquery.cookie/jquery.cookie.js
 
 .idea
