--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@
 /log/*.log
 /tmp
 
+# jquery
+vendor/assets/components/jquery/*
+!vendor/assets/components/jquery/jquery.js
+
 # font awesome
 vendor/assets/components/font-awesome/*
 !vendor/assets/components/font-awesome/sass/*.sass
